# aw-watcher-window-rs

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yaml
src/: main.rs
